--- a/Resume1/index.html
+++ b/Resume1/index.html
@@ -18,7 +18,7 @@
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Gladden Rumao</a></h1>
-					<p><strong>HELLO!</strong></p>
+					<p><strong>WELCOME!</strong></p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -52,7 +52,7 @@
 								<div class="container">
 									<header class="major">
 										<h2>About Me</h2>
-										<p>A highly organized and hard-working individual looking for a responsible position to gain practical experience.</a>.</p>
+										<p>A highly organized and hard-working individual looking for a responsible position to gain practical experience.</a></p>
 									</header>
 									<h2>Hobbies:</h2>
 									<ul>
@@ -67,7 +67,7 @@
 									</li>
 								  
 								    </ul>
-									<p>My name is <strong>Gladden Rumao</strong> and I am currently pursuing my 3rd year BE in  Computer Science from Fr. Conceicao Rodrigues College Of Engineering.  For More Details, send an email on  8637.gladden.tecomp@gmail.com</p>
+									<p>My name is <strong>Gladden Rumao</strong> and I am c pursuing my 3rd year BE in  Computer Science from Fr. Conceicao Rodrigues College Of Engineering.  For More Details, send an email on  8637.gladden.tecomp@gmail.com</p>urrently
 								</div>
 							</section>
 
@@ -128,7 +128,7 @@ In this course, we will learn the basic tools that every web page coder needs to
 												</thead>
 												<tbody>
 													<tr>
-														<td>B. Tech[Computrt Engineering]</td>
+														<td>B. Tech[Computer Engineering]</td>
 														<td>Fr. Conceicao Rodrigues College Of Engineering </td>
 														<td>University Of Mumbai</td>
 														<td>2022</td>
@@ -165,7 +165,7 @@ In this course, we will learn the basic tools that every web page coder needs to
 									<h3>Contact Me Here!</h3>
 									<p>Email: gladdenrumao@gmail.com
                                     <br>
-                                    <strong> or </strong>
+                                    <strong> or </strong> 
                                     </p>
 
 									<form method="post" action="#">
